env/code_53f2e6392d482/stderr.txt
  File "main.py", line 4
    else
       ^
SyntaxError: invalid syntax
